mb/intel/d510mo: Use native gfx initialization
Change-Id: Ic4de7a762e90b379be3814afc61467e1cd099215
Signed-off-by: Damien Zammit <damien@zamaudio.com>
Reviewed-on: https://review.coreboot.org/13034
Tested-by: build bot (Jenkins)
Reviewed-by: Alexander Couzens <lynxis@fe80.eu>
Reviewed-by: Alexandru Gagniuc <mr.nuke.me@gmail.com>

--- a/src/mainboard/intel/d510mo/Kconfig
+++ b/src/mainboard/intel/d510mo/Kconfig
@@ -23,6 +23,8 @@ config BOARD_SPECIFIC_OPTIONS
 	select SUPERIO_WINBOND_W83627THG
 	select HAVE_ACPI_TABLES
 	select BOARD_ROMSIZE_KB_1024
+	select MAINBOARD_HAS_NATIVE_VGA_INIT
+	select INTEL_INT15
 
 config MAX_CPUS
 	int
