--- a/src/mainboard/gigabyte/ga-g41m-es2l/Kconfig
+++ b/src/mainboard/gigabyte/ga-g41m-es2l/Kconfig
@@ -29,7 +29,7 @@ config BOARD_SPECIFIC_OPTIONS
 
 config MMCONF_BASE_ADDRESS
 	hex
-	default 0xc0000000
+	default 0xe0000000
 
 config MAINBOARD_DIR
 	string
