build system: Fix UPDATE_IMAGE
A quote was missing in a command.

Change-Id: I04148538007e5c450c6be113aab8a7fbb534db26
Signed-off-by: Patrick Georgi <patrick@georgi-clan.de>
Reported-by: Timothy Pearson <tpearson@raptorengineeringinc.com>
Reviewed-on: https://review.coreboot.org/13474
Reviewed-by: Timothy Pearson <tpearson@raptorengineeringinc.com>
Reviewed-by: Paul Menzel <paulepanter@users.sourceforge.net>
Reviewed-by: Nico Huber <nico.h@gmx.de>
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>
Tested-by: Raptor Engineering Automated Test Stand <noreply@raptorengineeringinc.com>

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -784,7 +784,7 @@ prebuild-files = \
 $(obj)/coreboot.pre: $$(prebuilt-files) $(CBFSTOOL)
 	mv $(obj)/coreboot.rom $@.tmp || \
 	(echo "Error: You have UPDATE_IMAGE set in Kconfig, but have no existing image to update." && \
-	echo Exiting." && \
+	echo "Exiting." && \
 	false)
 	$(prebuild-files) true
 	mv $@.tmp $@
