mainboard/lenovo: Add support for the Lenovo ThinkPad X220i
The ThinkPad X220i is essentially identical to the ThinkPad X220 but it
has a Sandybridge i3 (instead of a Sandybridge i5/i7) CPU and the
VGA_BIOS_ID differs. Thus, support is added by using the X220 mainboard
directory and setting the VGA_BIOS_ID in Kconfig.

Change-Id: I33345a099c617e8c87a1de64b7254b7e7716ca90
Signed-off-by: Christopher Spinrath <christopher.spinrath@rwth-aachen.de>
Reviewed-on: https://review.coreboot.org/13594
Tested-by: build bot (Jenkins)
Reviewed-by: Alexander Couzens <lynxis@fe80.eu>

--- a/src/mainboard/lenovo/x220/Kconfig
+++ b/src/mainboard/lenovo/x220/Kconfig
@@ -1,4 +1,4 @@
-if BOARD_LENOVO_X220
+if BOARD_LENOVO_X220 || BOARD_LENOVO_X220I
 
 config BOARD_SPECIFIC_OPTIONS # dummy
 	def_bool y
@@ -60,10 +60,12 @@ config DRAM_RESET_GATE_GPIO
 
 config VGA_BIOS_FILE
 	string
+	default "pci8086,0116.rom" if BOARD_LENOVO_X220I
 	default "pci8086,0126.rom"
 
 config VGA_BIOS_ID
 	string
+	default "8086,0116" if BOARD_LENOVO_X220I
 	default "8086,0126"
 
 config MAINBOARD_PCI_SUBSYSTEM_VENDOR_ID
@@ -74,4 +76,4 @@ config MAINBOARD_PCI_SUBSYSTEM_DEVICE_ID
 	hex
 	default 0x21db
 
-endif # BOARD_LENOVO_X220
+endif # BOARD_LENOVO_X220 || BOARD_LENOVO_X220I
