--- a/Makefile.inc
+++ b/Makefile.inc
@@ -650,23 +650,23 @@ ifeq ($(CONFIG_CBFS_AUTOGEN_ATTRIBUTES),y)
 endif
 
 define cbfs-add-cmd
-	printf "    CBFS       $(call extract_nth,2,$(file))\n"
+	printf "    CBFS       $(call extract_nth,2,$(1))\n"
 	$(CBFSTOOL) $@.tmp \
-	add$(if $(filter stage,$(call extract_nth,3,$(file))),-stage)$(if $(filter payload,$(call extract_nth,3,$(file))),-payload) \
-	-f $(call extract_nth,1,$(file)) \
-	-n $(call extract_nth,2,$(file)) \
-	$(if $(filter-out stage,$(call extract_nth,3,$(file))),-t $(call extract_nth,3,$(file))) \
-	$(if $(call extract_nth,4,$(file)),-c $(call extract_nth,4,$(file))) $(cbfs-autogen-attributes)\
-	-r $(call regions-for-file,$(call extract_nth,2,$(file))) \
-	$(call extract_nth,7,$(file)) $(1)
+	add$(if $(filter stage,$(call extract_nth,3,$(1))),-stage)$(if $(filter payload,$(call extract_nth,3,$(1))),-payload) \
+	-f $(call extract_nth,1,$(1)) \
+	-n $(call extract_nth,2,$(1)) \
+	$(if $(filter-out stage,$(call extract_nth,3,$(1))),-t $(call extract_nth,3,$(1))) \
+	$(if $(call extract_nth,4,$(1)),-c $(call extract_nth,4,$(1))) $(cbfs-autogen-attributes)\
+	-r $(call regions-for-file,$(call extract_nth,2,$(1))) \
+	$(call extract_nth,7,$(1)) $(2)
 endef
 
 cbfs-files=$(cbfs-files-fixed) $(cbfs-files-aligned) $(cbfs-files-regular)
 ifneq ($(CONFIG_UPDATE_IMAGE),y)
 prebuild-files = \
 	       $(foreach file,$(cbfs-files), \
-	       $(if $(call extract_nth,6,$(file)),$(call cbfs-add-cmd,-a $(call extract_nth,6,$(file))), \
-	       $(call cbfs-add-cmd,$(if $(call extract_nth,5,$(file)),-b $(call extract_nth,5,$(file))))))
+	       $(if $(call extract_nth,6,$(file)),$(call cbfs-add-cmd,$(file),-a $(call extract_nth,6,$(file))), \
+	       $(call cbfs-add-cmd,$(file),$(if $(call extract_nth,5,$(file)),-b $(call extract_nth,5,$(file))))))
 prebuilt-files = $(foreach file,$(cbfs-files), $(call extract_nth,1,$(file)))
 
 ifeq ($(CONFIG_FMDFILE),)
@@ -765,8 +765,8 @@ prebuilt-files = $(foreach file,$(cbfs-files), $(call extract_nth,1,$(file)))
 prebuild-files = \
 	$(foreach file,$(cbfs-files), \
 	$(CBFSTOOL) $@.tmp remove -n $(call extract_nth,2,$(file)) 2>/dev/null ; \
-	       $(if $(call extract_nth,6,$(file)),$(call cbfs-add-cmd,-a $(call extract_nth,6,$(file))),\
-	       $(call cbfs-add-cmd,$(if $(call extract_nth,5,$(file)),-b $(call extract_nth,5,$(file))) \
+	       $(if $(call extract_nth,6,$(file)),$(call cbfs-add-cmd,$(file),-a $(call extract_nth,6,$(file))),\
+	       $(call cbfs-add-cmd,$(file),$(if $(call extract_nth,5,$(file)),-b $(call extract_nth,5,$(file))) \
 	       $(cbfs-autogen-attributes))))
 
 .PHONY: $(obj)/coreboot.pre
