buildgcc: Rename ARM target from armv7a to arm
The ARM target can compile for much more than just v7a.

Change-Id: Ia4f67abcffdfe9c56c5d1848c75dfea83755e755
Signed-off-by: Stefan Reinauer <stefan.reinauer@coreboot.org>
Signed-off-by: Patrick Georgi <pgeorgi@chromium.org>
Reviewed-on: https://review.coreboot.org/13517
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -506,7 +506,7 @@ crossgcc-x64: clean-for-update
 	$(MAKE) -C util/crossgcc build-x64 SKIP_GDB=1
 
 crossgcc-arm: clean-for-update
-	$(MAKE) -C util/crossgcc build-armv7a SKIP_GDB=1
+	$(MAKE) -C util/crossgcc build-arm SKIP_GDB=1
 
 crossgcc-aarch64: clean-for-update
 	$(MAKE) -C util/crossgcc build-aarch64 SKIP_GDB=1
@@ -536,7 +536,7 @@ crosstools-x64: clean-for-update
 	$(MAKE) -C util/crossgcc build-x64
 
 crosstools-arm: clean-for-update
-	$(MAKE) -C util/crossgcc build-armv7a
+	$(MAKE) -C util/crossgcc build-arm
 
 crosstools-aarch64: clean-for-update
 	$(MAKE) -C util/crossgcc build-aarch64
