buildgcc: add nds32le compiler
Some Chrome ECs are based on that architecture

Change-Id: Ib5d0c2f6f518fafc1ceb02c5f71c0935d16c66bb
Signed-off-by: Stefan Reinauer <stefan.reinauer@coreboot.org>
Signed-off-by: Patrick Georgi <pgeorgi@chromium.org>
Reviewed-on: https://review.coreboot.org/13562
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/util/crossgcc/Makefile
+++ b/util/crossgcc/Makefile
@@ -64,6 +64,9 @@ build-riscv:
 build-power8:
 	@$(MAKE) build_tools BUILD_PLATFORM=powerpc64le-linux-gnu
 
+build-nds32le:
+	@$(MAKE) build_tools BUILD_PLATFORM=nds32le-elf
+
 clean_tempfiles:
 	rm -rf build-*
 	rm -rf binutils-* gcc-* gmp-* libelf-* mpc-* mpfr-*
@@ -78,7 +81,7 @@ clean: clean_tempfiles
 distclean: clean
 	rm -rf tarballs
 
-.PHONY: build_gcc build_iasl build_gdb build_clang \
-	all all_with_gdb all_without_gdb build_tools \
-	build-i386 build-x64 build-arm build-aarch64 build-mips build-riscv build-power8 \
+.PHONY: build_gcc build_iasl build_gdb build_clang all all_with_gdb \
+	all_without_gdb build_tools build-i386 build-x64 build-arm  \
+	build-aarch64 build-mips build-riscv build-power8 build-nds32le \
 	clean distclean clean_tempfiles
