stout: Fix VGA PCIIDs.
Change-Id: I7dcde170d0f59ea9886342c0d2c09b70b9d0d84d
Signed-off-by: Vladimir Serbinenko <phcoder@gmail.com>
Reviewed-on: https://review.coreboot.org/13537
Tested-by: build bot (Jenkins)
Reviewed-by: Philipp Deppenwiese <zaolin.daisuki@googlemail.com>

--- a/src/mainboard/google/stout/Kconfig
+++ b/src/mainboard/google/stout/Kconfig
@@ -37,7 +37,11 @@ config MAX_CPUS
 
 config VGA_BIOS_FILE
 	string
-	default "pci8086,0106.rom"
+	default "pci8086,0156.rom"
+
+config VGA_BIOS_ID
+	string
+	default "8086,0156"
 
 config MAINBOARD_PCI_SUBSYSTEM_VENDOR_ID
 	hex
