--- a/src/mainboard/google/samus/Kconfig
+++ b/src/mainboard/google/samus/Kconfig
@@ -49,4 +49,12 @@ config HAVE_ME_BIN
 	bool
 	default n
 
+config EC_GOOGLE_CHROMEEC_BOARDNAME
+	string
+	default "samus"
+
+config EC_GOOGLE_CHROMEEC_PD_BOARDNAME
+	string
+	default "samus_pd"
+
 endif
