--- a/src/mainboard/google/peach_pit/Kconfig
+++ b/src/mainboard/google/peach_pit/Kconfig
@@ -48,4 +48,8 @@ config UART_FOR_CONSOLE
 	int
 	default 3
 
+config EC_GOOGLE_CHROMEEC_BOARDNAME
+	string
+	default "pit"
+
 endif # BOARD_GOOGLE_PEACH_PIT
