--- a/src/mainboard/intel/strago/Kconfig
+++ b/src/mainboard/intel/strago/Kconfig
@@ -54,4 +54,9 @@ config VGA_BIOS_ID
 	  in soc/intel/braswell/Makefile.inc as 8086,22b1
 
 endif #GOP_SUPPORT
+
+config EC_GOOGLE_CHROMEEC_BOARDNAME
+	string
+	default "strago"
+
 endif # BOARD_INTEL_STRAGO
